criar-instancia-ec2/security_group.tf

resource "aws_security_group" "sg_ec2" {
  name        = var.sg_name
  description = "Permite qualquer acesso HTTP e SSH."
  vpc_id      = aws_vpc.main.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "Permite SSH"
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "Permite HTTP"
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
    description = "Permite qualquer acesso"
  }

  tags = {
    Name = "sg_ec2_guilhermelacerda_tf"
  }
}
